# scrapbook

./: .gitignore  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  debug.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/pty/: commands.rs  instance.rs  mod.rs
src-tauri/src/vault/: commands.rs
src/canvas/: AlignmentGuideRenderer.ts  CanvasManager.ts  CanvasRoot.tsx  GridRenderer.ts  ViewportController.ts
src/canvas/interactions/: DragInteraction.ts  InputRouter.ts  ResizeInteraction.ts  snapCalculation.ts
src/canvas/layers/: LayerManager.ts
src/canvas/nodes/: BaseNode.ts  NodeFactory.ts  TerminalNode.ts
src/ipc/: pty.ts  vault.ts
src/keybindings/: KeybindingManager.ts  defaults.ts
src/stores/: canvasSlice.ts  index.ts  nodesSlice.ts  selectionSlice.ts  settingsSlice.ts  terminalSlice.ts  vaultSlice.ts
src/terminal/: HiddenTerminalHost.tsx  TerminalInstance.ts  TerminalManager.ts  TerminalOverlay.tsx
src/types/: canvas.ts  node.ts  terminal.ts  vault.ts
src/ui/: ContextMenu.tsx  KeybindingsPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx
src/vault/: CanvasSwitcher.tsx  VaultPicker.tsx  autoSave.ts
